Add improved solution