@@ -4,6 +4,7 @@ import java.lang.management.ManagementFactory;
 
 /**
  * Homework 2. Size of java object.
+ * VM options: -Xmx64m -Xms64m -XX:-UseCompressedOops -XX:+PrintGCDetails
  */
 @SuppressWarnings({"RedundantStringConstructorCall", "InfiniteLoopStatement"})
 public class StandDemo
@@ -12,12 +13,13 @@ public class StandDemo
     {
         System.out.println("pid: " + ManagementFactory.getRuntimeMXBean().getName());
 
-        int size = 1_000_000;
+        int size = 100_000;
 
         Stand stand = new Stand();
 
         stand.getObjectSize(Object::new, size);
         stand.getObjectSize(() -> new String(""), size);
+        stand.getObjectSize(() -> new String(new char[]{}), size);
 
         stand.getObjectSize(MyClass::new, size);
         stand.getObjectSize(MyClassWithString::new, size);
